--- a/Base.lproj/Main.storyboard
+++ b/Base.lproj/Main.storyboard
@@ -21,13 +21,28 @@
                             <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translucent="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XSp-AL-Fbi">
                                 <rect key="frame" x="0.0" y="813" width="414" height="49"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="49" id="8dW-Yn-eav"/>
+                                </constraints>
                                 <items>
                                     <barButtonItem style="plain" systemItem="flexibleSpace" id="5Hu-ny-bpp"/>
-                                    <barButtonItem title="Item" id="c0N-mf-IUW"/>
+                                    <barButtonItem image="icon_album" id="c0N-mf-IUW">
+                                        <connections>
+                                            <action selector="presentAlbum" destination="BYZ-38-t0r" id="ew7-zS-qN3"/>
+                                        </connections>
+                                    </barButtonItem>
                                     <barButtonItem style="plain" systemItem="flexibleSpace" id="4ot-IW-kHo"/>
-                                    <barButtonItem title="Item" id="YHf-kn-lVK"/>
+                                    <barButtonItem image="icon_camera" id="YHf-kn-lVK">
+                                        <connections>
+                                            <action selector="presentCamera" destination="BYZ-38-t0r" id="U5V-mA-KFI"/>
+                                        </connections>
+                                    </barButtonItem>
                                     <barButtonItem style="plain" systemItem="flexibleSpace" id="MdK-19-oLS"/>
-                                    <barButtonItem title="Item" id="gKg-Pg-Xcv"/>
+                                    <barButtonItem image="icon_download" id="gKg-Pg-Xcv">
+                                        <connections>
+                                            <action selector="saveImage" destination="BYZ-38-t0r" id="txu-mP-4Zo"/>
+                                        </connections>
+                                    </barButtonItem>
                                     <barButtonItem style="plain" systemItem="flexibleSpace" id="cQB-mF-Lra"/>
                                 </items>
                             </toolbar>
@@ -38,23 +53,49 @@
                                     <constraint firstAttribute="height" constant="100" id="gGz-kK-2wN"/>
                                 </constraints>
                                 <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="XEU-bE-x2z">
-                                    <size key="itemSize" width="128" height="128"/>
+                                    <size key="itemSize" width="87" height="63"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="ZRu-0l-OEO">
-                                        <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="70" height="100"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="hOz-BW-ZX5">
-                                            <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="70" height="100"/>
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ct9-lY-gIs">
+                                                    <rect key="frame" x="0.0" y="0.0" width="70" height="70"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="70" id="FR1-dW-qxk"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5xq-sd-S1l">
+                                                    <rect key="frame" x="0.0" y="85.5" width="70" height="14.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="ct9-lY-gIs" firstAttribute="top" secondItem="hOz-BW-ZX5" secondAttribute="top" id="60d-TR-WLa"/>
+                                                <constraint firstItem="5xq-sd-S1l" firstAttribute="leading" secondItem="hOz-BW-ZX5" secondAttribute="leading" id="M3y-Jq-S4E"/>
+                                                <constraint firstAttribute="trailing" secondItem="5xq-sd-S1l" secondAttribute="trailing" id="O5V-qi-kA0"/>
+                                                <constraint firstItem="ct9-lY-gIs" firstAttribute="leading" secondItem="hOz-BW-ZX5" secondAttribute="leading" id="QCd-EL-8t7"/>
+                                                <constraint firstAttribute="bottom" secondItem="5xq-sd-S1l" secondAttribute="bottom" id="ZiM-Qp-ZXk"/>
+                                                <constraint firstItem="ct9-lY-gIs" firstAttribute="top" secondItem="hOz-BW-ZX5" secondAttribute="top" id="dUr-4r-fpl"/>
+                                                <constraint firstAttribute="trailing" secondItem="ct9-lY-gIs" secondAttribute="trailing" id="dYg-2w-lNu"/>
+                                                <constraint firstAttribute="trailing" secondItem="ct9-lY-gIs" secondAttribute="trailing" id="hza-vV-UyP"/>
+                                                <constraint firstItem="ct9-lY-gIs" firstAttribute="leading" secondItem="hOz-BW-ZX5" secondAttribute="leading" id="oYS-Qu-TKk"/>
+                                            </constraints>
                                         </collectionViewCellContentView>
+                                        <size key="customSize" width="70" height="100"/>
                                     </collectionViewCell>
                                 </cells>
                             </collectionView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="B6c-1z-J9u">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="photo" translatesAutoresizingMaskIntoConstraints="NO" id="B6c-1z-J9u">
                                 <rect key="frame" x="0.0" y="118" width="414" height="535"/>
                             </imageView>
                         </subviews>
@@ -74,6 +115,10 @@
                         </constraints>
                     </view>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                    <connections>
+                        <outlet property="collectionView" destination="2NL-dd-x3C" id="yWB-r8-zS6"/>
+                        <outlet property="imageView" destination="B6c-1z-J9u" id="Efh-zh-7pK"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
@@ -81,6 +126,10 @@
         </scene>
     </scenes>
     <resources>
+        <image name="icon_album" width="24" height="24"/>
+        <image name="icon_camera" width="24" height="24"/>
+        <image name="icon_download" width="24" height="24"/>
+        <image name="photo" width="330" height="440"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
